# Serenity-Editor

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.html  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  stats.html  svelte.config.js  update.json  vite.config.js  windi.config.js
.github/workflows/: build.yml
docs/: controls.md  index.html
docs/assets/: index.1f5f8910.js  index.6c14e0db.css  vendor.19b9dbec.js
docs/contributing/: architecture.md
docs/html/: controls.html
docs/html/contributing/: architecture.html
public/: manifest.json
src/: App.svelte  app.html  main.js  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Modal.svelte  NavDropdown.svelte  lowLightBuild.js
src/components/fileDialog/: tauri.js  web.js
src/components/parsers/: markdownConverter.js
src/lib/components/: EditorComponents.svelte  EditorPlaceholder.svelte  Input.svelte  NavDropdown.svelte  PWA.svelte
src/lib/modules/browser-fs-access/: file-save.mjs  supported.mjs
src/lib/modules/browser-fs-access/fs-access/: directory-open.mjs  file-open.mjs
src/lib/modules/browser-fs-access/fs-access-legacy/: directory-open.mjs
src/lib/modules/browser-fs-access/legacy/: directory-open.mjs  file-open.mjs  file-save.mjs
src/lib/modules/parsers/: markdownExporter.js  markdownImporter.js
src/routes/: Editor.svelte  PrivacyPolicy.svelte  __layout.svelte  index.svelte
src/views/: Editor.svelte
static/: manifest.json
static/Editor/: manifest.json
